# mlops_projects

./: .gitignore  CHANGELOG.md  CHROME_VIEWING_GUIDE.md  Dockerfile.train  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  validation_issues_classification.txt  validation_results_classification.json  validation_summary_dataset.yaml
.github/: _last_heartbeat
.github/workflows/: build-and-push.yml  ci.yml  contrib-heartbeat.yml  mlops-pipeline.yml  train-and-build.yml
config/: pyproject.toml  requirements.txt
deployment/docker/: Dockerfile.serve  Dockerfile.train
deployment/k8s/: mlflow-deployment.yaml  secret.yaml  serve-deployment.yaml  train-job.yaml
docs/: ARCHITECTURE.md  REFACTORING_SUMMARY.md
docs/ADRs/: 0001-tech-choices.md
docs/guides/: CONTRIBUTION_HEARTBEAT_SETUP.md
k8s/: configmap.yaml
mlops/config/: logging.yaml  settings.yaml
mlops/data/: __init__.py  features.py  loader.py  validate.py
mlops/modeling/: __init__.py  evaluate.py  promote.py  train.py
mlops/modeling/dl/: __init__.py  datamodule.py  torch_estimator.py
mlops/orchestration/: __init__.py  cli.py
mlops/serving/: __init__.py  app.py  client_example.py
mlops/utils/: __init__.py  config.py  io.py  logging.py  metrics.py  seed.py
mlruns/0/: meta.yaml
mlruns/0/030f767e9e1c487e83a542578bf55cd1/: meta.yaml
mlruns/0/030f767e9e1c487e83a542578bf55cd1/metrics/: mse  r2_score  rmse
mlruns/0/030f767e9e1c487e83a542578bf55cd1/tags/: mlflow.runName
mlruns/0/082cc8bfabe04c4886c72a5dcd65c5e6/: meta.yaml
mlruns/0/082cc8bfabe04c4886c72a5dcd65c5e6/metrics/: mse  r2_score  rmse
mlruns/0/082cc8bfabe04c4886c72a5dcd65c5e6/tags/: mlflow.runName
mlruns/0/11e460f588714767b2ee38a33833fcf7/: meta.yaml
mlruns/0/11e460f588714767b2ee38a33833fcf7/tags/: mlflow.runName
mlruns/0/2d1d2509ce904ac7b41d0c1d43c5ae17/: meta.yaml
mlruns/0/2d1d2509ce904ac7b41d0c1d43c5ae17/metrics/: mse  r2_score  rmse
mlruns/0/2d1d2509ce904ac7b41d0c1d43c5ae17/tags/: mlflow.runName
mlruns/0/4063bd08e2f44243ac499bde567a1fc8/: meta.yaml
mlruns/0/4063bd08e2f44243ac499bde567a1fc8/artifacts/: feature_importance_gain.json
mlruns/0/4063bd08e2f44243ac499bde567a1fc8/tags/: mlflow.runName
mlruns/0/438f46a32ca046de97457e7ef3399bdb/: meta.yaml
mlruns/0/438f46a32ca046de97457e7ef3399bdb/tags/: mlflow.runName
mlruns/0/492b06fa4c8b4dd98a8c49ea1648a447/: meta.yaml
mlruns/0/492b06fa4c8b4dd98a8c49ea1648a447/metrics/: mse  r2_score  rmse
mlruns/0/492b06fa4c8b4dd98a8c49ea1648a447/tags/: mlflow.runName
mlruns/0/4e6c1b20287e4210b95a4e77abff0322/: meta.yaml
mlruns/0/4e6c1b20287e4210b95a4e77abff0322/tags/: mlflow.runName
mlruns/0/6436534d18ec4947b723838bbd51d73a/: meta.yaml
mlruns/0/6436534d18ec4947b723838bbd51d73a/tags/: mlflow.runName
mlruns/0/6ebb6bac81ba485490f7855553b1b130/: meta.yaml
mlruns/0/6ebb6bac81ba485490f7855553b1b130/metrics/: mse  r2_score  rmse
mlruns/0/6ebb6bac81ba485490f7855553b1b130/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/7032d125d2784094a58003ec5fe62e8e/: meta.yaml
mlruns/0/7032d125d2784094a58003ec5fe62e8e/metrics/: mse  r2_score  rmse
mlruns/0/7032d125d2784094a58003ec5fe62e8e/tags/: mlflow.runName
mlruns/0/72567d679e1449e9a748905540a92aac/: meta.yaml
mlruns/0/72567d679e1449e9a748905540a92aac/metrics/: mse  r2_score  rmse
mlruns/0/72567d679e1449e9a748905540a92aac/tags/: mlflow.runName
mlruns/0/76637dadb5ef43babacb259479848048/: meta.yaml
mlruns/0/76637dadb5ef43babacb259479848048/artifacts/: feature_importance_split.json
mlruns/0/76637dadb5ef43babacb259479848048/tags/: mlflow.runName
mlruns/0/96851d7673a948708c09c827b50255b7/: meta.yaml
mlruns/0/96851d7673a948708c09c827b50255b7/metrics/: mse  r2_score  rmse
mlruns/0/96851d7673a948708c09c827b50255b7/tags/: mlflow.runName
mlruns/0/99ba2c91123d4ad297721b1efbe38507/: meta.yaml
mlruns/0/99ba2c91123d4ad297721b1efbe38507/tags/: mlflow.runName
mlruns/0/aba30913bbdc46e3b5b62dd0a87cf3a1/: meta.yaml
mlruns/0/aba30913bbdc46e3b5b62dd0a87cf3a1/tags/: mlflow.runName
mlruns/0/b11dc85922e94747b2020f03fba0c8c1/: meta.yaml
mlruns/0/b11dc85922e94747b2020f03fba0c8c1/metrics/: mse  r2_score  rmse
mlruns/0/b11dc85922e94747b2020f03fba0c8c1/tags/: mlflow.runName
mlruns/0/bfdaa5d4d9c646a79f4a4cd507f0b312/: meta.yaml
mlruns/0/bfdaa5d4d9c646a79f4a4cd507f0b312/metrics/: mse  r2_score  rmse
mlruns/0/bfdaa5d4d9c646a79f4a4cd507f0b312/tags/: mlflow.runName
mlruns/0/c994074d0d954b33aba3b249f50e87f4/: meta.yaml
mlruns/0/c994074d0d954b33aba3b249f50e87f4/tags/: mlflow.runName
mlruns/0/ca6482b337584e7cb8484c5474b59661/: meta.yaml
mlruns/0/ca6482b337584e7cb8484c5474b59661/metrics/: mse  r2_score  rmse
mlruns/0/ca6482b337584e7cb8484c5474b59661/tags/: mlflow.runName
mlruns/0/d55d6ef2d7d941e69f800819e84057c9/: meta.yaml
mlruns/0/d55d6ef2d7d941e69f800819e84057c9/tags/: mlflow.runName
mlruns/0/d7996237f746401a9facb8e1c397edc8/: meta.yaml
mlruns/0/d7996237f746401a9facb8e1c397edc8/tags/: mlflow.runName
mlruns/0/datasets/37046a8bec6bbfb10e8f38a1c89962d8/: meta.yaml
mlruns/0/datasets/79de2c58a353e6830570ebb5d5a708c7/: meta.yaml
mlruns/0/e64581606546446697240965deb87198/: meta.yaml
mlruns/0/e64581606546446697240965deb87198/metrics/: mse  r2_score  rmse
mlruns/0/e64581606546446697240965deb87198/tags/: mlflow.runName
mlruns/0/e73c72f2da6744b1bd3f98813e4241bc/: meta.yaml
mlruns/0/e73c72f2da6744b1bd3f98813e4241bc/tags/: mlflow.runName
scripts/: prune_repo.sh  run_local_mlflow.sh  smoke_train.sh
src/: Pipeline.ipynb  __init__.py  customer_satisfaction.py  run_pipeline.py  run_pipeline_simple.py  setup_zenml.py  streamlit_app.py  train.py  train_customer.py  view_results.py
src/mlruns/0/: meta.yaml
src/model/: model_dev.py
src/pipelines/: deployment_pipeline.py  training_pipeline.py
src/steps/: clean_data.py  config.py  evaluation.py  ingest_data.py  model_train.py
tests/: __init__.py  test_training.py
tests/e2e/: test_pipeline.py
tests/unit/: test_config.py
validation/: validation_results_classification.json
(+60 files in other folders)
